# splice-junction-detector

./: README.md  pyproject.toml  setup.py
data/: splice.csv
scripts/: eda.ipynb
