[project]
name = "sjd"
version = "0.0.1"
authors = [{ name = "Paul Hein", email = "paul.d.hein@gmail.com" }]
description = "A collection of ML algorithms designed to detect splice junctions in DNA sequences"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pauldhein/splice-junction-detector"
"Bug Tracker" = "https://github.com/pauldhein/splice-junction-detector/issues"

[build-system]
requires = ["setuptools >= 68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
